# warlib

./: .gitignore  CMakeLists.txt  Doxygen  README.md  war_config.h.template
cmake_scripts/: add_and_run_test.cmake  boost.cmake  doxygen.cmake  external-projects.cmake
core/: CMakeLists.txt
core/base/: CMakeLists.txt
core/include/warlib/: WarCleanUp.h  WarLog.h  WarPipeline.h  WarThreadpool.h  asio.h  basics.h  debug_helper.h  filecheck.h  helper.h  impl.h  transaction.h
core/include/warlib/win/: minidump.h  msvc_pragmas.h
core/src/: WarLog.cpp  WarPipeline.cpp  WarThreadpool.cpp  ostream_operators.cpp
core/src/win/: filecheck.cpp
core/tasks/: CMakeLists.txt
core/tests/: perftests.cpp  test_tasks.cpp  war_tests.h
include/: war_asio.h  war_basics.h  war_boost_ptree_helper.h  war_config.h  war_debug_helper.h  war_error_handling.h  war_filecheck.h  war_helper.h  war_impl.h  war_transaction.h  war_uuid.h
include/log/: WarLog.h
include/tasks/: WarCleanUp.h  WarPipeline.h  WarThreadpool.h
src/: CMakeLists.txt
src/base/: CMakeLists.txt  ostream_operators.cpp
src/base/win/: minidump.cpp
src/log/: CMakeLists.txt  WarLog.cpp
src/tasks/: CMakeLists.txt  WarPipeline.cpp  WarThreadpool.cpp  pch.cpp  war_tasks.h
tests/: CMakeLists.txt  pch.cpp  perftests.cpp  test_tasks.cpp  war_tests.h
